uncomment how to create an event

--- a/flaskProject/templates/SetupContentView.html
+++ b/flaskProject/templates/SetupContentView.html
@@ -63,7 +63,7 @@
             </fieldset>
             <hr>
             <fieldset class="form-group">
-                <label for="exampleFormControlSelect1">Please select an option</label>
+                <label>Please select an option</label>
                 <select name="selection" id="selection" class="selection form-control">
                     <option disabled selected hidden>Select an option</option>
                     <option value="create">Create a new event (any existing event will be archived)</option>
