--- a/flaskProject/templates/EventView.html
+++ b/flaskProject/templates/EventView.html
@@ -26,7 +26,7 @@
     <p>{{ event.getOrganizationName() }}</p>
     <hr>
     <h4>Customer name</h4>
-    <p>{{ event.getName() }}</p>
+    <p>{{ event.getCustomerName() }}</p>
     <hr>
     <h4>Assessment date</h4>
     <p>{{ event.getDate() }}</p>
