--- a/flaskProject/templates/CreateEvent.html
+++ b/flaskProject/templates/CreateEvent.html
@@ -7,8 +7,8 @@
     <form method="POST">
         <div class="form-row">
             <div class="form-group">
-                {#                <label>Event type</label>#}
-                {#                <input class="form-control" name="eventType">#}
+                {# <label>Event type</label> #}
+                {# <input class="form-control" name="eventType"> #}
                 {{ form.EventName.label }}
                 <br>
                 {{ form.EventName(class_="form-control") }}
@@ -22,12 +22,12 @@
         <div class="form-group">
             {{ form.EventLeadAnalysts.label }}
             <br>
-            {{ form.EventLeadAnalysts(class_="form-control", placeholder="MM, CJ, JJ") }}
+            {{ form.EventLeadAnalysts(class_="form-control", placeholder="MM-CJ-JJ") }}
         </div>
         <div class="form-group">
             {{ form.EventAnalysts.label }}
             <br>
-            {{ form.EventAnalysts(class_="form-control", placeholder="MM, CJ, JJ") }}
+            {{ form.EventAnalysts(class_="form-control", placeholder="MM-CJ-JJ") }}
         </div>
         <div class="form-group">
             {{ form.OrganizationName.label }}
@@ -54,28 +54,18 @@
             <br>
             {{ form.DeclassificationDate(class_="form-control") }}
         </div>
-
-        {#        <div class="form-group">#}
-        {#            <label>Event location</label>#}
-        {#            <input class="form-control" name="eventLocation">#}
-        {#        </div>#}
         <div class="form-group">
             <label>Event classification</label>
             {{ form.EventClassification.label }}
             <br>
             {{ form.EventClassification(class_="form-control") }}
         </div>
-        {#        <div class="form-group">#}
-        {#            <label>Test plan title</label>#}
-        {#            <input class="form-control" name="eventTPT">#}
-        {#        </div>#}
-
         <div class="form-group">
             {{ form.EventDescription.label }}
             <br>
             {{ form.EventDescription(class_="form-control") }}
         </div>
-        <button type="submit" name="create" class="btn btn-secondary">Create</button>
+        <button type="submit" name="createEvent" class="btn btn-secondary">Create</button>
         <button type="submit" class="btn btn-secondary"><a href="{{ url_for('SetupContentView') }}">Cancel</a></button>
     </form>
     <hr>
