--- a/flaskProject/templates/SetupContentView.html
+++ b/flaskProject/templates/SetupContentView.html
@@ -3,54 +3,6 @@
 
 <!-- html code for the body of the page-->
 {% block content %}
-    <!-- Script to redirect to the right page based on the user selection and to validate the ip address-->
-    <script>
-        $(document).ready(function () {
-            $(`select.selection`).change(function () {
-                let ip = $('#ip');
-                const selection = $(this).children('option:selected').val();
-
-                if (selection === "create") {
-                    //make the ip field not required
-                    ip.removeAttr('required');
-                    $('#form').attr('action', "{{ url_for('CreateEvent') }}");
-                } else if (selection === "sync") {
-                    //make the ip field required
-                    ip.attr('required', '');
-                    //validate field, then change page to go on submission
-                    ip.change(function () {
-                        if (isIpAddress(ip.val())) {
-                            $('#form').attr('action', "{{ url_for('EventView') }}");
-                        } else {
-                            alert("Incorrect IP Address");
-                        }
-                    });
-                }
-            });
-        });
-
-        function isIpAddress(s) {
-            // There must be 4 parts separated by dots.
-            const parts = s.split('.');
-            if (parts.length !== 4) {
-                return false;
-            }
-            // Each of the four parts must be an integer in the range 0 to 255.
-            for (let i = 0; i < 4; ++i) {
-                const part = parts[i];
-                // Each part must consist of 1 to 3 decimal digits.
-                if (!/^\d{1,3}$/.test(part)) {
-                    return false;
-                }
-                const n = +part;
-                if (0 > n || n > 0xff) {
-                    return false;
-                }
-            }
-            return true;
-        }
-    </script>
-
     <div class="form">
         <form id="form" action="" method="post">
             <div>
@@ -58,25 +10,34 @@
                 <h4>There is no existing event in your local system</h4>
             </div>
             <fieldset>
-                <label>Please enter your initials</label>
-                <input name="initials" type="text" class="form-control" placeholder="Initial" required>
+                {{ form.SUCVInitials.label }}
+                <br>
+                {{ form.SUCVInitials(class_="form-control") }}
+
             </fieldset>
             <hr>
             <fieldset class="form-group">
-                <label>Please select an option</label>
-                <select name="selection" id="selection" class="selection form-control">
-                    <option disabled selected hidden>Select an option</option>
-                    <option value="create">Create a new event (any existing event will be archived)</option>
-                    <option value="sync">First time sync with lead analyst.</option>
-                </select>
+                {{ form.SUCVSelection.label }}
+                <br>
+                {{ form.SUCVSelection(class_="form-control") }}
             </fieldset>
             <fieldset>
-                <label>First time sync with lead analyst. Please enter the lead analyst’s IP”</label>
-                <input name="sync" type="text" id="ip" class="form-control"
-                       placeholder="Please enter the lead analyst’s IP">
+                {{ form.SUCVIpAddress.label }}
+                <br>
+                {{ form.SUCVIpAddress(class_="form-control") }}
             </fieldset>
+            {#        Code to show an alert message under the ip address if it is not valid#}
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert-danger form-control">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
             <hr>
-            <button type="submit" value="submit" class="btn btn-secondary">Submit</button>
+            <button type="submit" value="submit" name="LogCreateEvent" class="btn btn-secondary">Submit</button>
         </form>
     </div>
 {% endblock content %}
