added functionality to archive an event, changed setupcontentview form to be made with flask-wtf to be able to handle the form info

--- a/flaskProject/templates/CreateEvent.html
+++ b/flaskProject/templates/CreateEvent.html
@@ -50,6 +50,16 @@
             {{ form.AssessmentDate(class_="form-control") }}
         </div>
         <div class="form-group">
+            {{ form.EventClassifiedBy.label }}
+            <br>
+            {{ form.EventClassifiedBy(class_="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.EventDerivedFrom.label }}
+            <br>
+            {{ form.EventDerivedFrom(class_="form-control") }}
+        </div>
+        <div class="form-group">
             {{ form.DeclassificationDate.label }}
             <br>
             {{ form.DeclassificationDate(class_="form-control") }}
