--- a/flaskProject/templates/EditEvent.html
+++ b/flaskProject/templates/EditEvent.html
@@ -42,12 +42,22 @@
             <br>
             {{ form.EditEventAssessmentDate(class_="form-control") }}
         </div>
+
+        <div class="form-group">
+            {{ form.EditEventClassifiedBy.label }}
+            <br>
+            {{ form.EditEventClassifiedBy(class_="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.EditEventDerivedFrom.label }}
+            <br>
+            {{ form.EditEventDerivedFrom(class_="form-control") }}
+        </div>
         <div class="form-group">
             {{ form.EditEventDeclassificationDate.label }}
             <br>
             {{ form.EditEventDeclassificationDate(class_="form-control") }}
         </div>
-
         <div class="form-group">
             {{ form.EditEventClassification.label }}
             <br>
