added functionality and error messages for trying to enter to an archived event

--- a/flaskProject/templates/SystemView.html
+++ b/flaskProject/templates/SystemView.html
@@ -39,13 +39,13 @@
     <h3>System Categorization</h3>
     <br>
     <h4>Confidentiality</h4>
-    <p>This is some other text.</p>
+    <p>{{ system.getConfidentiality() }}</p>
     <hr>
     <h4>System Integrity</h4>
-    <p>This is some other text.</p>
+    <p>{{ system.getIntegrity() }}</p>
     <hr>
     <h4>System Availability</h4>
-    <p>This is some other text.</p>
+    <p>{{ system.getAvailability() }}</p>
     <hr>
 
     <h3>list of tasks</h3>
